Replace public quarks in kernel code (#690)

--- a/l3experimental/l3draw/l3draw-softpath.dtx
+++ b/l3experimental/l3draw/l3draw-softpath.dtx
@@ -326,8 +326,8 @@
           \tl_build_get:NN \g_@@_softpath_main_tl \l_@@_softpath_internal_tl
           \exp_after:wN \@@_softpath_round_loop:Nnn
             \l_@@_softpath_internal_tl
-            \q_recursion_tail ? ?
-            \q_recursion_stop
+            \q_@@_recursion_tail ? ?
+            \q_@@_recursion_stop
         \group_end:
       }
     \bool_gset_false:N \g_@@_softpath_corners_bool
@@ -342,7 +342,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_softpath_round_loop:Nnn #1#2#3
   {
-    \quark_if_recursion_tail_stop_do:Nn #1 { \@@_softpath_round_end: }
+    \@@_if_recursion_tail_stop_do:Nn #1 { \@@_softpath_round_end: }
     \token_if_eq_meaning:NNTF #1 \@@_softpath_roundpoint_op:nn
       { \@@_softpath_round_action:nn {#2} {#3} }
       {
@@ -505,7 +505,7 @@
 \cs_new:Npn \@@_softpath_round_calc:nnnnnn #1#2#3#4#5#6
   {
     \@@_softpath_round_calc:nnnnw {#3} {#4} {#5} {#6}
-      #1 \q_mark #2 \q_stop
+      #1 \s_@@_mark #2 \s_@@_stop
   }
 \cs_generate_variant:Nn \@@_softpath_round_calc:nnnnnn { fV }
 %    \end{macrocode}
@@ -513,7 +513,7 @@
 %   quadratic Bézier curve.
 %    \begin{macrocode}
 \cs_new:Npn \@@_softpath_round_calc:nnnnw
-  #1#2#3#4 #5 , #6 \q_mark #7 , #8 \q_stop
+  #1#2#3#4 #5 , #6 \s_@@_mark #7 , #8 \s_@@_stop
   {
     {#5} {#6}
     \exp_not:N \@@_softpath_curveto_opi:nn
@@ -556,7 +556,7 @@
                 \exp_not:N \exp_after:wN
                   \exp_not:N \@@_softpath_round_close:w
                   \exp_not:N \l_@@_softpath_curve_end_tl
-                    \exp_not:N \q_stop
+                    \s_@@_stop
               }
             \use:x
               {
@@ -567,7 +567,7 @@
                       \exp_not:N \exp_after:wN
                         \exp_not:N \@@_softpath_round_close:w
                         \exp_not:N \l_@@_softpath_curve_end_tl
-                          \exp_not:N \q_stop
+                          \s_@@_stop
                   }
               }
           }
@@ -576,7 +576,7 @@
           \exp_after:wN \use_none:n \l_@@_softpath_move_tl
       }
   }
-\cs_new:Npn \@@_softpath_round_close:w #1 , #2 \q_stop { {#1} {#2} }
+\cs_new:Npn \@@_softpath_round_close:w #1 , #2 \s_@@_stop { {#1} {#2} }
 %    \end{macrocode}
 %   Tidy up the parts of the path, complete the built token list and put
 %   it back into action. 
