--- a/l3experimental/l3sys-shell/l3sys-shell.dtx
+++ b/l3experimental/l3sys-shell/l3sys-shell.dtx
@@ -141,6 +141,27 @@
 %</package>
 %    \end{macrocode}
 %
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\q_@@_nil}
+%   Internal quarks.
+%    \begin{macrocode}
+\quark_new:N \q_@@_nil
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[pTF]{\@@_quark_if_nil:n}
+%   Branching quark conditional.
+%    \begin{macrocode}
+\__kernel_quark_new_conditional:Nn \@@_quark_if_nil:N { F }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\@@_path_to_win:n}
 % \begin{macro}[EXP]{\@@_path_to_win:w}
 % \begin{macro}[EXP]{\@@_path_to_win:N}
@@ -148,20 +169,20 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_path_to_win:n #1
   {
-    \exp_after:wN \@@_path_to_win:w \tl_to_str:n {#1} ~ \q_stop
+    \exp_after:wN \@@_path_to_win:w \tl_to_str:n {#1} ~ \s_@@_stop
   }
-\cs_new:Npn \@@_path_to_win:w #1 ~ #2 \q_stop
+\cs_new:Npn \@@_path_to_win:w #1 ~ #2 \s_@@_stop
   {
-    \@@_path_to_win:N #1 \q_nil
+    \@@_path_to_win:N #1 \q_@@_nil
     \tl_if_empty:nF {#2}
       {
         \c_space_tl
-        \@@_path_to_win:w #2 \q_stop
+        \@@_path_to_win:w #2 \s_@@_stop
       }
   }
 \cs_new:Npn \@@_path_to_win:N #1
   {
-    \quark_if_nil:NF #1
+    \@@_quark_if_nil:NF #1
       {
         \token_if_eq_meaning:NNTF #1 /
           { \c_backslash_str }
