--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -131,6 +131,37 @@
 \ProvidesExplFile{l3debug.def}{2019-04-06}{}{L3 Debugging support}
 %    \end{macrocode}
 %
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_use_i_delimit_by_s_stop:nw}
+%   Functions to gobble up to a scan mark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_i_delimit_by_s_stop:nw #1 #2 \s_@@_stop {#1}
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{variable}{\q_@@_recursion_tail,\q_@@_recursion_stop}
+%   Internal quarks.
+%    \begin{macrocode}
+\quark_new:N \q_@@_recursion_tail
+\quark_new:N \q_@@_recursion_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_if_recursion_tail_stop:N}
+%   Functions to query recursion quarks.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_none_delimit_by_q_recursion_stop:w
+  #1 \q_@@_recursion_stop { }
+\__kernel_quark_new_test:N \@@_if_recursion_tail_stop:N
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\debug_on:n, \debug_off:n, \@@_all_on:, \@@_all_off:}
 %    \begin{macrocode}
 \cs_set_protected:Npn \debug_on:n #1
@@ -314,9 +345,9 @@
   { \exp_args:NNf \@@_chk_var_scope_aux:Nn #1 { \cs_to_str:N #2 } }
 \cs_new_protected:Npn \@@_chk_var_scope_aux:Nn #1#2
   {
-    \if:w _ \use_i:nn \use_i_delimit_by_q_stop:nw #2 ? ? \q_stop
+    \if:w _ \use_i:nn \@@_use_i_delimit_by_s_stop:nw #2 ? ? \s_@@_stop
       \exp_after:wN \@@_chk_var_scope_aux:NNn
-        \use_i_delimit_by_q_stop:nw #2 ? \q_stop
+        \@@_use_i_delimit_by_s_stop:nw #2 ? \s_@@_stop
         #1 {#2}
     \else:
       \exp_args:Nc \@@_chk_var_scope_aux:NNn
@@ -489,16 +520,16 @@
 \cs_new:Npn \@@_build_parm_text:n #1
   {
     \@@_arg_list_from_signature:nNN { 1 } \c_false_bool #1
-    \q_recursion_tail \q_recursion_stop
+    \q_@@_recursion_tail \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_build_arg_list:n #1
   {
     \@@_arg_list_from_signature:nNN { 1 } \c_true_bool #1
-    \q_recursion_tail \q_recursion_stop
+    \q_@@_recursion_tail \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_arg_list_from_signature:nNN #1 #2 #3
   {
-    \quark_if_recursion_tail_stop:N #3
+    \@@_if_recursion_tail_stop:N #3
     \@@_arg_check_invalid:N #3
     \bool_if:NT #2 { \@@_arg_if_braced:NT #3 { \use_none:n } }
     \use:n { \c_hash_str \int_eval:n {#1} }
@@ -523,7 +554,7 @@
     \exp_end:
   }
 \cs_new:Npn \@@_parm_terminate:w
-  { \exp_after:wN \use_none_delimit_by_q_recursion_stop:w \exp:w }
+  { \exp_after:wN \@@_use_none_delimit_by_q_recursion_stop:w \exp:w }
 \prg_new_conditional:Npnn \@@_arg_if_braced:N #1 { T }
   { \exp_args:Nf \@@_arg_if_braced:n { \@@_get_base_form:N #1 } }
 \cs_new:Npn \@@_arg_if_braced:n #1
@@ -649,7 +680,7 @@
             ####2 \tl_to_str:n { -> }
             ####3 \c_backslash_str \tl_to_str:n { __debug_ }
                     \cs_to_str:N #1
-            ####4 \exp_not:N \q_mark
+            ####4 \s_@@_stop
             {
               \exp_not:N \exp_args:Nx \exp_not:N \tex_scantokens:D
                 {
@@ -663,7 +694,7 @@
                 }
             }
         }
-      \exp_after:wN \@@_tmp:w \cs_meaning:N #1 \q_mark
+      \exp_after:wN \@@_tmp:w \cs_meaning:N #1 \s_@@_stop
     }
 %    \end{macrocode}
 %   Some functions, however, won't work with the signature reading setup
@@ -1380,7 +1411,7 @@
           \__kernel_chk_expr:nNnN
             {##1} \tex_glueexpr:D { } \skip_if_finite:n
         ; \prg_return_false:
-        #1 ; \prg_return_true: \q_stop
+        #1 ; \prg_return_true: \s_@@_stop
       }
   }
 \exp_args:No \@@_tmp:w { \tl_to_str:n { fil } }
