--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -525,6 +525,23 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \subsection{Internal auxiliaries}
+%
+% \begin{variable}{\s_@@_mark,\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_mark
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_use_none_delimit_by_s_stop:w}
+%   Functions to gobble up to a scan mark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_none_delimit_by_s_stop:w #1 \s_@@_stop { }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Creating messages}
 %
 % Messages are created and used separately, so there two parts to
@@ -1207,15 +1224,15 @@
     {
       \tl_if_in:nnTF { ^^J #1 } { ^^J > ~ }
         {
-          \tl_if_in:nnTF { #1 \q_mark } { . \q_mark }
+          \tl_if_in:nnTF { #1 \s_@@_mark } { . \s_@@_mark }
             { \@@_show_dot:w } { \@@_show:w }
-          ^^J #1 \q_stop
+          ^^J #1 \s_@@_stop
         }
         { \@@_show:nn { ? #1 } { } }
     }
-  \cs_new:Npn \@@_show_dot:w #1 ^^J > ~ #2 . \q_stop
+  \cs_new:Npn \@@_show_dot:w #1 ^^J > ~ #2 . \s_@@_stop
     { \@@_show:nn {#1} {#2} }
-  \cs_new:Npn \@@_show:w #1 ^^J > ~ #2 \q_stop
+  \cs_new:Npn \@@_show:w #1 ^^J > ~ #2 \s_@@_stop
     { \@@_show:nn {#1} {#2} }
   \cs_new_protected:Npn \@@_show:nn #1#2
     {
@@ -1338,16 +1355,16 @@
       {
         \seq_clear:N \l_@@_hierarchy_seq
         \@@_use_hierarchy:nwwN { }
-          #1 \q_mark \@@_use_hierarchy:nwwN
-          /  \q_mark \use_none_delimit_by_q_stop:w
-          \q_stop
+          #1 \s_@@_mark \@@_use_hierarchy:nwwN
+          /  \s_@@_mark \@@_use_none_delimit_by_s_stop:w
+          \s_@@_stop
         \@@_use_redirect_module:n { }
       }
   }
-\cs_new_protected:Npn \@@_use_hierarchy:nwwN #1#2 / #3 \q_mark #4
+\cs_new_protected:Npn \@@_use_hierarchy:nwwN #1#2 / #3 \s_@@_mark #4
   {
     \seq_put_left:Nn \l_@@_hierarchy_seq {#1}
-    #4 { #1 / #2 } #3 \q_mark #4
+    #4 { #1 / #2 } #3 \s_@@_mark #4
   }
 %    \end{macrocode}
 %   At this point, the items of \cs{l_@@_hierarchy_seq} are the
@@ -1798,6 +1815,18 @@
 \__kernel_msg_new:nnnn { kernel } { quote-in-shell }
   { Quotes~in~shell~command~'#1'. }
   { Shell~commands~cannot~contain~quotes~("). }
+\__kernel_msg_new:nnnn { kernel } { invalid-quark-function }
+  { Quark~test~function~'#1'~is~invalid. }
+  {
+    \c__msg_coding_error_text_tl
+    LaTeX~has~been~asked~to~create~quark~test~function~'#1'~
+    \tl_if_empty:nTF {#2}
+      { but~that~name~ }
+      { with~signature~'#2',~but~that~signature~ }
+    is~not~valid.
+  }
+\__kernel_msg_new:nnn { kernel } { invalid-quark }
+  { Invalid~quark~variable~'#1'. }
 \__kernel_msg_new:nnnn { kernel } { scanmark-already-defined }
   { Scan~mark~#1~already~defined. }
   {
@@ -1984,7 +2013,7 @@
 %   is an extra subtlety: if the user inserts tokens for error recovery,
 %   they should be kept. Thus we also use an odd space character
 %   (with category code $7$) and keep tokens until that space character,
-%   dropping everything else until \cs{q_stop}. The \cs{exp_end:} prevents
+%   dropping everything else until \cs{s_@@_stop}. The \cs{exp_end:} prevents
 %   losing braces around the user-inserted text if any, and stops the
 %   expansion of \cs{exp:w}.  The group is used to prevent
 %   |\LaTeX3~error:| from being globally equal to \cs{scan_stop:}.
