--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1975,7 +1975,7 @@
 \exp_args:No \@@_tmp:w { \c_novalue_tl }
 %<*package>
 \cs_new_protected:Npx \@@_normalize_type_g:w
-  { \exp_not:N \@@_normalize_type_G:w  \exp_not:V \c_novalue_tl } }
+  { \exp_not:N \@@_normalize_type_G:w { \exp_not:V \c_novalue_tl } }
 %</package>
 %    \end{macrocode}
 % \end{macro}
