return in unexpanded

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -810,9 +810,14 @@
 %   \end{syntax}
 %   Replaces all occurrences of \meta{token} in the \meta{token list} which
 %   aren't hidden inside a braced group with \meta{new tokens} and leaves the
-%   result in the input stream after two expansions. \meta{token} must be a
-%   legal |N|-type argument, so it can't be a token with category code $1$
-%   (begin-group), $2$ (end-group), or $10$ (space).
+%   result in the input stream. \meta{token} must be a legal |N|-type argument,
+%   so it can't be a token with category code $1$ (begin-group), $2$
+%   (end-group), or $10$ (space).
+%   \begin{texnote}
+%     The result is returned within \tn{unexpanded}, which means that the token
+%     list does not expand further when appearing in an \texttt{x}-type
+%     argument expansion.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[added = 2020-05-14, EXP]{\tl_replace_token_deep:nNn}
@@ -822,7 +827,12 @@
 %   \end{syntax}
 %   Like \cs[no-index]{tl_replace_token:nNn} but this one also replaces every
 %   instance of \meta{token} which is in braced groups disregarding the nesting
-%   level. The result is left in the input stream after two expansions.
+%   level. The result is left in the input stream.
+%   \begin{texnote}
+%     The result is returned within \tn{unexpanded}, which means that the token
+%     list does not expand further when appearing in an \texttt{x}-type
+%     argument expansion.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[added = 2011-07-09, updated = 2012-06-25, EXP]
@@ -2869,13 +2879,16 @@
 %    \begin{macrocode}
 \cs_new:Npn \tl_replace_token:nNn #1 #2 #3
   {
-    \exp:w
-    \@@_act:NNNnn
-      \@@_replace_token_normal:nN
-      \@@_replace_token_output_group:nn
-      \@@_replace_token_space:n
-      { #2 { #3 } }
-      { #1 }
+    \__kernel_exp_not:w \exp_after:wN
+      {
+        \exp:w
+        \@@_act:NNNnn
+          \@@_replace_token_normal:nN
+          \@@_replace_token_output_group:nn
+          \@@_replace_token_space:n
+          { #2 { #3 } }
+          { #1 }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2917,13 +2930,16 @@
 %    \begin{macrocode}
 \cs_new:Npn \tl_replace_token_deep:nNn #1 #2 #3
   {
-    \exp:w
-    \@@_act:NNNnn
-      \@@_replace_token_normal:nN
-      \@@_replace_token_replace_in_groups:nn
-      \@@_replace_token_space:n
-      { #2 { #3 } }
-      { #1 }
+    \__kernel_exp_not:w \exp_after:wN
+      {
+        \exp:w
+        \@@_act:NNNnn
+          \@@_replace_token_normal:nN
+          \@@_replace_token_replace_in_groups:nn
+          \@@_replace_token_space:n
+          { #2 { #3 } }
+          { #1 }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
