--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -975,24 +975,15 @@
 %
 %    \begin{macrocode}
 %<*2ekernel>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
 \everyjob\expandafter{\the\everyjob
   \message{xparse <2020-03-03>}%
 }
 \ExplSyntaxOn
-%    \end{macrocode}
-%
-%    \begin{macrocode}
 %</2ekernel>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
 %<*package>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
 \ProvidesExplPackage{xparse}{2020-05-14}{}
   {L3 Experimental document command parser}
 %    \end{macrocode}
@@ -1015,13 +1006,10 @@
 \keys_set:nV { xparse } \l_@@_options_clist
 \bool_if:NF \l_@@_log_bool
   { \msg_redirect_module:nnn { LaTeX / xparse } { info } { none } }
-%    \end{macrocode}
-% \end{variable}
-% \end{variable}
-%
-%    \begin{macrocode}
 %</package>
 %    \end{macrocode}
+% \end{variable}
+% \end{variable}
 %
 % \subsection{Catcode regime check}
 %
@@ -1056,7 +1044,7 @@
 % \subsection{Variables and constants}
 %
 %    \begin{macrocode}
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 %
 % \begin{variable}{\c_@@_special_chars_seq}
@@ -1925,7 +1913,7 @@
         \@@_bad_def:wn
       }
   }
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_gset_protected:Npn \@@_normalize_arg_spec_loop:n #1
   {
@@ -1939,7 +1927,7 @@
       }
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1986,12 +1974,12 @@
       { \@@_normalize_type_t:w * }
   }
 \exp_args:No \@@_tmp:w { \c_novalue_tl }
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npx \@@_normalize_type_g:w
   { \exp_not:N \@@_normalize_type_G:w { \exp_not:V \c_novalue_tl } }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2105,7 +2093,7 @@
         \@@_normalize_E_unique_check:w #2 \q_stop
       }
   }
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_G:w #1
   {
@@ -2116,7 +2104,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 \cs_new_protected:Npn \@@_normalize_type_t:w #1
   {
     \quark_if_recursion_tail_stop_do:Nn #1 { \@@_bad_arg_spec:wn }
@@ -2153,7 +2141,7 @@
 %   \cs{l_@@_arg_spec_tl}, count the mandatory argument, and empty the
 %   list of last delimiters.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_l:w
   {
@@ -2162,7 +2150,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 \cs_new_protected:Npn \@@_normalize_type_m:w
   {
     \@@_delimiter_check:nnn { } { m } { \iow_char:N \{ }
@@ -2179,7 +2167,7 @@
     \@@_add_arg_spec_mandatory:n { R #1 #2 {#3} }
     \@@_normalize_arg_spec_loop:n
   }
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_normalize_type_u:w #1
   {
@@ -2189,7 +2177,7 @@
     \@@_normalize_arg_spec_loop:n
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 \cs_new_protected:Npn \@@_normalize_type_v:w
   {
     \@@_normalize_check_gv:N v
@@ -2548,7 +2536,7 @@
 %   For the \texttt{G} type, the grabber and the default are added to the
 %   signature.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_add_type_G:w #1
   {
@@ -2572,7 +2560,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2628,7 +2616,7 @@
 %   At the set up stage, the \texttt{u} type argument is identical to the
 %   \texttt{G} type except for the name of the grabber function.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_add_type_u:w #1
   {
@@ -2639,7 +2627,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2858,12 +2846,12 @@
 %   parameter text ends with |#| in fact end up being delimited by an
 %   open brace.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_add_expandable_type_l:w
   { \@@_add_expandable_type_u:w ## }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2912,7 +2900,7 @@
 %   Define an auxiliary that will be used directly in the signature.  It
 %   grabs one argument delimited by |#1| and places it before \cs{q_@@}.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_add_expandable_type_u:w #1
   {
@@ -2927,7 +2915,7 @@
     \@@_prepare_signature:N
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -3331,7 +3319,7 @@
 %   Optional groups are checked by meaning, so that the same code will
 %   work with, for example, \ConTeXt{}-like input.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_grab_G:w #1 \@@_run_code:
   {
@@ -3363,7 +3351,7 @@
       { \@@_add_arg:o \c_novalue_tl }
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3376,7 +3364,7 @@
 % \begin{macro}{\@@_grab_l_aux:nN}
 %   Argument grabbers for mandatory \TeX{} arguments are pretty simple.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_grab_l:w #1 \@@_run_code:
   { \@@_grab_l_aux:nN {#1} \cs_set_protected_nopar:Npn }
@@ -3390,7 +3378,7 @@
     \l_@@_fn_tl
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3562,7 +3550,7 @@
 %   Grabbing up to a list of tokens is quite easy: define the grabber,
 %   and then collect.
 %    \begin{macrocode}
-%</!package>
+%</!2ekernel|package>
 %<*package>
 \cs_new_protected:Npn \@@_grab_u:w #1#2 \@@_run_code:
   { \@@_grab_u_aux:nnN {#1} {#2} \cs_set_protected_nopar:Npn }
@@ -3576,7 +3564,7 @@
     \l_@@_fn_tl
   }
 %</package>
-%<*!package>
+%<*!2ekernel|package>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -5212,16 +5200,16 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%<*2ekernel>
-\ExplSyntaxOff
-%</2ekernel>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
 %<*core>
 \@@_file_end_hook:
 %</core>
-%</!package>
+%</!2ekernel|package>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*2ekernel>
+\ExplSyntaxOff
+%</2ekernel>
 %    \end{macrocode}
 %
 % \end{implementation}
