--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1016,10 +1016,10 @@
 %    \begin{macrocode}
 %<*core>
 \if_charcode:w xx
-  \cs_new:Npn \@@_file_end_hook: { }
+  \cs_gset:Npn \@@_file_end_hook: { }
 \else
   \ExplSyntaxOn
-  \cs_new:Npn \@@_file_end_hook: { \ExplSyntaxOff }
+  \cs_gset:Npn \@@_file_end_hook: { \ExplSyntaxOff }
 \fi:
 %</core>
 %    \end{macrocode}
