--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -114,6 +114,14 @@
 %   the matching \cs{cctab_begin:N} was used.
 % \end{function}
 %
+% \begin{function}[added = 2020-05-19]{\cctab_select:N}
+%   \begin{syntax}
+%     \cs{cctab_select:N}\meta{category code table}
+%   \end{syntax}
+%   Selects the \meta{category code table} for the scope of the current
+%   group.
+% \end{function}
+%
 % \subsection{Category code table conditionals}
 %
 % \begin{function}[pTF]{\cctab_if_exist:N,\cctab_if_exist:c}
@@ -401,6 +409,25 @@
       { \@@_end: }
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\cctab_select:N}
+% \begin{macro}{\@@_end_fast:}
+%   Select a catcode table within a group.
+%    \begin{macrocode}
+\cs_new_protected:Npn \cctab_select:N #1
+  {
+    \@@_chk_if_valid:NT #1
+      {
+        \@@_begin:N #1
+        \group_insert_after:N \@@_end_fast:
+      }
+  }
+\cs_generate_variant:Nn \cctab_select:N { c }
+\cs_new_protected:Npn \@@_end_fast:
+  { \int_gsub:Nn \g_@@_stack_int { 2 } }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\cctab_if_exist:N,\cctab_if_exist:c}
