Replace one explicit internal function

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -400,7 +400,7 @@
 %   \cs{cctab_end:}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \cctab_begin:N #1
-  { \@@_chk_if_valid:NT #1 { \__cctab_begin:N #1 } }
+  { \@@_chk_if_valid:NT #1 { \@@_begin:N #1 } }
 \cs_generate_variant:Nn \cctab_begin:N { c }
 \cs_new_protected:Npn \cctab_end:
   {
