Pop cctab stack correctly

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -424,8 +424,12 @@
       }
   }
 \cs_generate_variant:Nn \cctab_select:N { c }
-\cs_new_protected:Npn \@@_end_fast:
-  { \int_gsub:Nn \g_@@_stack_int { 2 } }
+\cs_new_protected:Npx \@@_end_fast:
+  {
+    \int_gsub:Nn \exp_not:N \g_@@_stack_int { 2 }
+    \sys_if_engine_luatex:T
+      { \seq_gpop:NN \exp_not:N \g_@@_stack_seq \exp_not:N \l_@@_tmp_tl }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
