--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -365,6 +365,13 @@
 % distinguish variables from functions in the source when the |@@|
 % convention is used.
 %
+% Please note that you have to use the \pkg{l3docstrip} and
+% \textbf{not} the \pkg{docstrip} program in your \texttt{.ins} files
+% to make this work---the original \LaTeXe{} \pkg{docstrip} doesn't
+% understand the \texttt{@@} and will just copy it into your code
+% unmodified!
+%
+%
 % \subsubsection{Variables: declaration}
 %
 % In well-formed \pkg{expl3} code, variables should always be declared before
