Correct an error name

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -856,7 +856,7 @@
         \@@_check_model:N #3
       }
       {
-        \__kernel_msg_error:nnn { color } { invalid-model } {#1}
+        \__kernel_msg_error:nnn { color } { unknown-model } {#1}
       }
   }
 %    \end{macrocode}
@@ -980,17 +980,17 @@
 % \subsection{Messages}
 %
 % \begin{macrocode}
-\__kernel_msg_new:nnnn { color } { invalid-model }
-  { Invalid~color~model~'#1'. }
-  {
-    LaTeX~has~been~asked~to~use~a~color~model~called~'#1',~
-    but~this~model~is~not~set~up.
-  }
 \__kernel_msg_new:nnnn { color } { unknown-color }
   { Unknown~color~'#1'. }
   {
     LaTeX~has~been~asked~to~use~a~color~named~'#1',~
     but~this~has~never~been~defined.
+  }
+\__kernel_msg_new:nnnn { color } { unknown-model }
+  { Unknown~color~model~'#1'. }
+  {
+    LaTeX~has~been~asked~to~use~a~color~model~called~'#1',~
+    but~this~model~is~not~set~up.
   }
 % \end{macrocode}
 %
