--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -156,8 +156,6 @@
 %
 % \begin{macro}{\@@_select:n, \@@_select:V}
 % \begin{macro}{\@@_select:w}
-% \begin{macro}
-%   {\@@_select_cmyk:w, \@@_select_gray:w, \@@_select_rgb:w, \@@_select_spot:w}
 %    Take an internal color specification and pass it to the driver. This code
 %    is needed to ensure the current color but will also be used by the
 %    higher-level experimental material.
@@ -166,17 +164,8 @@
   { \@@_select:w #1 \s_@@_stop }
 \cs_generate_variant:Nn \@@_select:n { V }
 \cs_new_protected:Npn \@@_select:w #1 ~ #2 \s_@@_stop
-  { \use:c { @@_select_ #1 :w } #2 \s_@@_stop }
-\cs_new_protected:Npn \@@_select_cmyk:w #1 ~ #2 ~ #3 ~ #4 \s_@@_stop
-  { \@@_backend_cmyk:nnnn {#1} {#2} {#3} {#4} }
-\cs_new_protected:Npn \@@_select_gray:w #1 \s_@@_stop
-  { \@@_backend_gray:n {#1} }
-\cs_new_protected:Npn \@@_select_rgb:w #1 ~ #2 ~ #3 \s_@@_stop
-  { \@@_backend_rgb:nnn {#1} {#2} {#3} }
-\cs_new_protected:Npn \@@_select_spot:w #1 ~ #2 \s_@@_stop
-  { \@@_backend_spot:nn {#1} {#2} }
+  { \use:c { @@_backend_ #1 :w } #2 \s_@@_stop }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
