--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -258,7 +258,7 @@
   {
      \use:x
        {
-         \@@_backend_rgb_aux:nnn
+         \@@_backend_rgb:nnn
            { \fp_eval:n {#1} }
            { \fp_eval:n {#2} }
            { \fp_eval:n {#3} }
