Generalise color model support
At present, there is no 'init' part, so CIE-LAB and CMYK
separations look the same.

Mixing separations not-yet implemented:
first agree on the interfaces.

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -113,7 +113,6 @@
 % \begin{macro}{\@@_backend_cmyk:w}
 % \begin{macro}{\@@_backend_gray:w}
 % \begin{macro}{\@@_backend_rgb:w}
-% \begin{macro}{\@@_backend_spot:w}
 % \begin{macro}{\@@_backend_select:n, \@@_backend_select:x}
 % \begin{macro}{\@@_backend_reset:}
 % \begin{macro}{color.fc}
@@ -136,8 +135,6 @@
     \@@_backend_select:x
       { rgb~ \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} }
   }
-\cs_new_protected:Npn \@@_backend_spot:w #1 ~ #2 \s_@@_stop
-  { \@@_backend_select:n { #1 } }
 \cs_new_protected:Npn \@@_backend_select:n #1
   {
     \__kernel_backend_literal:n { color~push~ #1 }
@@ -156,6 +153,13 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+%
+% \begin{macro}{\@@_backend_family_separation:nw}
+%   Setup for meta-models.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_family_separation:nw #1#2 \s_@@_stop
+  { \@@_backend_select:n {#1} }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -229,7 +233,6 @@
 % \begin{macro}{\@@_backend_cmyk:w, \@@_backend_cmyk:nnnn}
 % \begin{macro}{\@@_backend_gray:w, \@@_backend_gray:n}
 % \begin{macro}{\@@_backend_rgb:w, \@@_backend_rgb:nnn}
-% \begin{macro}{\@@_backend_spot:w}
 % \begin{macro}{\@@_backend_select:n, \@@_backend_select:x}
 % \begin{macro}{\@@_backend_reset:}
 %   Simply dump the data, but allowing for \LuaTeX{}.
@@ -266,8 +269,6 @@
   }
 \cs_new_protected:Npn \@@_backend_rgb:nnn #1#2#3
   { \@@_backend_select:n { #1 ~ #2 ~ #3 ~ rg ~ #1 ~ #2 ~ #3 ~ RG } }
-\cs_new_protected:Npn \@@_backend_spot:w #1 ~ #2 \s_@@_stop
-  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC } }
 \cs_new_protected:Npx \@@_backend_select:n #1
   {
     \cs_if_exist:NTF \tex_pdfextension:D
@@ -290,6 +291,13 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+%
+% \begin{macro}{\@@_backend_family_separation:nw}
+%   Set up for meta-models.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_family_separation:nw #1#2 \s_@@_stop
+  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC } }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
