Use scn/SCN in place of sc/SC
Seems better from the PDF ref.

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -296,7 +296,7 @@
 %   Set up for meta-models.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_family_separation:nw #1#2 \s_@@_stop
-  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC } }
+  { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
 %    \end{macrocode}
 % \end{macro}
 %
