Minor performance enhancements
As the backend is now all internal, there is no
need to re-apply \fp_eval:n to 'safe' values.

--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -313,7 +313,7 @@
       { \dim_to_decimal_in_bp:n {#1} ~ setlinewidth }
   }
 \cs_new_protected:Npn \@@_backend_miterlimit:n #1
-  { \@@_backend_literal:x { \fp_eval:n {#1} ~ setmiterlimit } }
+  { \@@_backend_literal:n { #1 ~ setmiterlimit } }
 \cs_new_protected:Npn \@@_backend_cap_butt:
   { \@@_backend_literal:n { 0 ~ setlinecap } }
 \cs_new_protected:Npn \@@_backend_cap_round:
@@ -392,14 +392,7 @@
 \cs_new_protected:Npn \@@_backend_cm:nnnn #1#2#3#4
   {
     \@@_backend_literal:n
-      {
-        [
-          \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-          \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-          0 ~ 0
-        ] ~
-        concat
-      }
+      { [ #1 ~ #2 ~ #3 ~ #4 ~ 0 ~ 0 ] ~ concat }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -607,7 +600,7 @@
       { \dim_to_decimal_in_bp:n {#1} ~ w }
   }
 \cs_new_protected:Npn \@@_backend_miterlimit:n #1
-  { \@@_backend_literal:x { \fp_eval:n {#1} ~ M } }
+  { \@@_backend_literal:x { #1 ~ M } }
 \cs_new_protected:Npn \@@_backend_cap_butt:
   { \@@_backend_literal:n { 0 ~ J } }
 \cs_new_protected:Npn \@@_backend_cap_round:
@@ -700,11 +693,7 @@
 \cs_new_protected:Npn \@@_backend_cm:nnnn #1#2#3#4
   {
 %<*pdfmode>
-    \__kernel_backend_matrix:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4}
-      }
+    \__kernel_backend_matrix:n { #1 ~ #2 ~ #3 ~ #4 }
 %</pdfmode>
 %<*dvipdfmx|xdvipdfmx>
     \@@_backend_cm_decompose:nnnnN {#1} {#2} {#3} {#4}
@@ -858,13 +847,8 @@
     \@@_backend_cm:nnnn {#2} {#3} {#4} {#5}
 %</pdfmode>
 %<*dvipdfmx|xdvipdfmx>
-    \__kernel_backend_literal:x
-      {
-        pdf:btrans~matrix~
-        \fp_eval:n {#2} ~ \fp_eval:n {#3} ~
-        \fp_eval:n {#4} ~ \fp_eval:n {#5} ~
-        0 ~ 0
-      }
+    \__kernel_backend_literal:n
+      { pdf:btrans~matrix~ #2 ~ #3 ~ #4 ~ #5 ~ 0 ~ 0 }
 %</dvipdfmx|xdvipdfmx>
     \hbox_overlap_right:n { \box_use:N #1 }
 %<*dvipdfmx|xdvipdfmx>
@@ -1153,7 +1137,7 @@
 \cs_new_protected:Npn \@@_backend_linewidth:n #1
   { \@@_backend_scope:x { stroke-width=" \dim_to_decimal:n {#1} " } }
 \cs_new_protected:Npn \@@_backend_miterlimit:n #1
-  { \@@_backend_scope:x { stroke-miterlimit=" \fp_eval:n {#1} " } }
+  { \@@_backend_scope:x { stroke-miterlimit=" #1 " } }
 \cs_new_protected:Npn \@@_backend_cap_butt:
   { \@@_backend_scope:n { stroke-linecap="butt" } }
 \cs_new_protected:Npn \@@_backend_cap_round:
@@ -1267,14 +1251,7 @@
     \@@_backend_scope:n
       {
        transform =
-         "
-           matrix
-             (
-               \fp_eval:n {#1} , \fp_eval:n {#2} ,
-               \fp_eval:n {#3} , \fp_eval:n {#4} ,
-               0pt , 0pt
-             )
-         "
+         " matrix ( #1 , #2 , #3 , #4 , 0pt , 0pt ) "
       }
   }
 %    \end{macrocode}
