Document \file_parse_full_name:n

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -677,7 +677,7 @@
 %   If the file is not found on the path, the expansion is empty.
 % \end{function}
 %
-% \begin{function}[added = 2017-06-23, updated = 2017-06-26]
+% \begin{function}[added = 2017-06-23, updated = 2020-06-24]
 %   {\file_parse_full_name:nNNN, \file_parse_full_name:VNNN}
 %   \begin{syntax}
 %     \cs{file_parse_full_name:nNNN} \Arg{full name} \meta{dir} \meta{name} \meta{ext}
@@ -697,9 +697,28 @@
 %     \item The \meta{ext}: everything after the last |.| (including the dot).
 %       The \meta{ext} is empty if there is no |.| after the last |/|.
 %   \end{itemize}
-%   This function does not expand the \meta{full name} before turning it
-%   to a string.  It assume that the \meta{full name} either contains no
-%   quote (|"|) characters or is surrounded by a pair of quotes.
+%
+%   Before parsing, the \meta{full name} is expanded until only non-expandable
+%   tokens remain, except that active characters are also not expanded.
+%   Quotes (|"|) are invalid in file names and are discarded from the input.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2020-06-24]{\file_parse_full_name:n}
+%   \begin{syntax}
+%     \cs{file_parse_full_name:n} \Arg{full name}
+%   \end{syntax}
+%   Parses the \meta{full name} as described for \cs{file_parse_full_name:nNNN},
+%   and leaves \meta{dir}, \meta{name}, and \meta{ext} in the input stream,
+%   each inside a pair of braces.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2020-06-24]{\file_parse_full_name_apply:nN}
+%   \begin{syntax}
+%     \cs{file_parse_full_name:n} \Arg{full name} \meta{function}
+%   \end{syntax}
+%   Parses the \meta{full name} as described for \cs{file_parse_full_name:nNNN},
+%   and passes \meta{dir}, \meta{name}, and \meta{ext} as arguments to \meta{function},
+%   as an \texttt{n}-type argument each, in this order.
 % \end{function}
 %
 % \begin{function}[rEXP, added = 2019-11-19]
