Move l3cctab to stable

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -423,6 +423,7 @@
 %   \item[bool]   either true or false (the \LaTeX3 implementation does
 %                 not use \tn{iftrue} or \tn{iffalse});
 %   \item[box]    box register;
+%   \item[cctab]  category code table;
 %   \item[clist]  comma separated list;
 %   \item[coffin] a \enquote{box with handles} --- a higher-level data
 %                 type for carrying out |box| alignment operations;
