--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -11,7 +11,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -22,9 +22,6 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{expl3}
-%</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
@@ -34,7 +31,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3cctab} package\\ Experimental category code tables^^A
+%   The \pkg{l3cctab} package\\ Category code tables^^A
 % }
 %
 % \author{^^A
@@ -52,14 +49,12 @@
 %
 % \begin{documentation}
 %
-% \section{\pkg{l3cctab} documentation}
-%
 % A category code table enables rapid switching of all category codes in
 % one operation. For \LuaTeX{}, this is possible over the entire Unicode
-% range. For other engines, only the $8$-bit range ($0$-$255$) is covered by
+% range. For other engines, only the $8$-bit range ($0$--$255$) is covered by
 % such tables.
 %
-% \subsection{Creating and initialising category code tables}
+% \section{Creating and initialising category code tables}
 %
 % \begin{function}{\cctab_new:N,\cctab_new:c}
 %   \begin{syntax}
@@ -93,7 +88,7 @@
 %   not respect grouping.
 % \end{function}
 %
-% \subsection{Using category code tables}
+% \section{Using category code tables}
 %
 % \begin{function}{\cctab_begin:N,\cctab_begin:c}
 %   \begin{syntax}
@@ -122,7 +117,7 @@
 %   group.
 % \end{function}
 %
-% \subsection{Category code table conditionals}
+% \section{Category code table conditionals}
 %
 % \begin{function}[pTF]{\cctab_if_exist:N,\cctab_if_exist:c}
 %   \begin{syntax}
@@ -134,7 +129,7 @@
 %   category code table.
 % \end{function}
 %
-% \subsection{Constant category code tables}
+% \section{Constant category code tables}
 %
 % \begin{variable}{\c_code_cctab}
 %   Category code table for the code environment. This does not include
@@ -175,13 +170,6 @@
 %
 %    \begin{macrocode}
 %<@@=cctab>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-%<*package>
-\ProvidesExplPackage{l3cctab}{2020-06-18}{}
-  {L3 Experimental category code tables}
-%</package>
 %    \end{macrocode}
 %
 % \begin{variable}{\g_@@_allocate_int}
