l3cctab minor code streamlining

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -226,14 +226,14 @@
 %<*initex>
         \int_gadd:Nn \g_@@_allocate_int { 2 }
         \int_compare:nNnTF
-          \g_@@_allocate_int < { \c_max_register_int + 1 }
-           {
-             \tex_global:D \tex_chardef:D #1 \g_@@_allocate_int
-             \tex_initcatcodetable:D #1
-           }
+          \g_@@_allocate_int > \c_max_register_int
            {
              \__kernel_msg_fatal:nnx
                { kernel } { out-of-registers } { cctab }
+           }
+           {
+             \tex_global:D \tex_chardef:D #1 \g_@@_allocate_int
+             \tex_initcatcodetable:D #1
            }
 %</initex>
 %<*package>
@@ -258,9 +258,8 @@
     \cs_new_protected:Npn \@@_end:
       {
         \int_gsub:Nn \g_@@_stack_int { 2 }
-        \seq_if_empty:NTF \g_@@_stack_seq
+        \seq_gpop:NNF \g_@@_stack_seq \l_@@_tmp_tl
           { \tl_set:Nn \l_@@_tmp_tl { 0 } }
-          { \seq_gpop:NN \g_@@_stack_seq \l_@@_tmp_tl }
         \tex_catcodetable:D \l_@@_tmp_tl \scan_stop:
       }
 %    \end{macrocode}
